--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>ノウカサバイバー</title>
     <link rel="stylesheet" href="css/Foundation/destyle.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/Layout/_header.scss">
+    <link rel="stylesheet" href="css/Layout/_tab.scss">
+    <link rel="stylesheet" href="css/Layout/_tabText.scss">
+    <link rel="stylesheet" href="css/Layout/_footer.scss">
 	<script src="lax.min.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -15,7 +19,15 @@
 
   <!-- Body Section -->
   <body>
-	
+    <header class="l_header">
+      <div class="c_logo"></div>
+      <div class="c_menu">
+        <p class="c_tabText"></p>
+      </div>
+    </header>
+    <footer class="l_footer">
+      <div class="c_footerText"></div>
+    </footer>
   <!-- Menu Section -->
 		<script src="main.js"></script>
   </body>
